copy apt packages

--- a/install
+++ b/install
@@ -2,6 +2,9 @@
 
 set -e
 
+# copy list of all packages installed with apt
+comm -23 <(apt-mark showmanual | sort -u) <(gzip -dc /var/log/installer/initial-status.gz | sed -n 's/^Package: //p' | sort -u) > apt_packages
+
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
 # dotbot vars
